--- a/code/과제1/과제1.md
+++ b/code/과제1/과제1.md
@@ -12,3 +12,10 @@
 
 기타: mail이라는 기능으로 리눅스로 메일로 보낼 수 있다. 
 예시 : 스크립트로 시간을 계산해서 유통기한 임박한 제품들을 계속 메일로 보냄.
+
+stress 도구 사용.
+stress 라는 도구가 있음.
+
+검색해서 설치한 다음 해당 도구를 이용해서 메모리 사용량을 원하는 수준으로 조절할 수 있음.
+
+이를 이용해서, 특정 임계값(00%)를 설정해놓고, 넘기는게 관측되면 알림이 오거나 메일을 보내는 등의 조치를 수행시킬 수 있음.
